style.css
/* Define a class that disables scrolling */
.disable-scroll {
  overflow: hidden;
}

* {
  text-decoration: none;
  list-style: none;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
  scroll-behavior: smooth;
}

body {
  margin: 0px;
  padding: 0px;
  font-family: "Roboto", sans-serif;
  background-color: #f5f9ff;
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: initial;
}

nav {
  position: relative;
  margin: 1rem 1rem 0px 1rem;
  padding: 1vh;
  background: rgba(127, 200, 248, 0.8);
  border-radius: 45px;
  height: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  backdrop-filter: blur(10px);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  z-index: 2;
}

.navbar label.logo {
  margin-left: 1.5rem;
  color: gold;
  font-size: 3rem;
  line-height: 80px;
  padding: 0px 15px;
  font-weight: bold;
  z-index: 3;
}

.logo:hover {
  cursor: pointer;
}

.navbar ul {
  float: right;
  margin-right: 1.5rem;
  border-radius: 45px;
}
.navbar ul li {
  display: inline-block;
  /* line-height: 80px; */
  margin: 0 5px;
}

.navbar ul li a {
  color: whitesmoke;
  padding: 7px 13px;
  border-radius: 3px;
  text-align: center;
  font-size: 2.3vmin;
  cursor: pointer;
  position: relative;
}

.navbar ul li::after {
  width: 0;
  height: 3px;
  background: #2192ff;
  position: absolute;
  left: 0;
  bottom: -10px;
}
.navbar a {
  position: relative;
}

.navbar ul li a:hover {
  transform: scale(2);
  opacity: 1;
  filter: blur(0);
  text-decoration: none;
  color: gold;
  font-size: 2rem;
  transition: 0.3s;
}

.navbar ul li a:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: 0.5s;
  transform-origin: right;
  transform: scaleX(0);
  z-index: -1;
}

.navbar ul li a:hover:before {
  transition: transform 0.5s;
  transform-origin: left;
  transform: scaleX(1);
}
.checkbtn {
  font-size: 40px;
  color: whitesmoke;
  float: right;
  line-height: 80px;
  margin-right: 40px;
  cursor: pointer;
  display: none;
}
#check {
  display: none;
}

.fa-bars:before,
.fa-navicon:before {
  content: "\f0c9";
}

@media (max-width: 952px) {
  /* .navbar {
    width: calc(100% - 2px) !important;
  } */
  .navbar label.logo {
    font-size: 30px;
    padding-left: 10px;
  }
  .navbar nav ul li a {
    display: hidden;
  }

  .ul {
    display: block;
  }
}

@media (max-width: 858px) {
  .checkbtn {
    display: block;
  }
  .navbar ul {
    z-index: 5;
    position: fixed;
    width: 100vw;
    height: auto;
    background: rgba(127, 200, 248, 0.9);
    top: 80px;
    left: -150%;
    text-align: center;
    transition: all 0.5s;
    overflow: hidden;
  }
  .navbar label.logo {
    order: -1;
    margin-left: 1.5rem;
  }
}

/* Mobile menu */
/* Hide the mobile menu by default */
.mobile-menu {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(127, 200, 248);
  z-index: 9999;
  opacity: 0;
  visibility: hidden;
  transition: visibility 0s 0.7s, opacity 0.7s;
}

.show-menu {
  display: block;
  animation: fade-in-from-bottom 0.8s forwards;
}

@keyframes fade-in {
  from {
    opacity: 0;
    visibility: visible;
  }
  to {
    opacity: 1;
    visibility: visible;
  }
}

@keyframes fade-in-from-bottom {
  from {
    opacity: 0;
    transform: translateY(100%);
    visibility: visible;
  }
  to {
    opacity: 1;
    transform: translateY(0);
    visibility: visible;
  }
}

.mobile-menu ul {
  font-size: 1.5rem;
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.mobile-menu a {
  color: gold;
  animation: fade-in 2.3s forwards;
}

.mobile-menu ul li {
  margin: 20px 0;
}

.close-button-container {
  position: absolute;
  top: 10px;
  right: 10px;
}

.close-button {
  font-size: 2rem;
  float: right;
  color: white;
  background-color: rgba(127, 200, 248);
  border: none;
  margin: 20px;
  cursor: pointer;
}

@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
  only screen and (-o-min-device-pixel-ratio: 3/2),
  only screen and (min--moz-device-pixel-ratio: 1.5),
  only screen and (min-device-pixel-ratio: 1.5) {
  html,
  body {
    width: 100%;
    overflow-x: hidden;
  }
}

